--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
     <script src="underscore.js"></script>
   </head>
@@ -12,12 +12,13 @@
     </article>
 
     <article class="buttons-container">
-      <div ng-repeat="button in buttons" class="button button-{{button.name}}" ng-click="clickGenius()"></div>
+      <div ng-repeat="button in buttons" on-repeat-render="renderButtons()" class="button button-{{button.name}}" ng-click="clickGenius()"></div>
       <div id="score">{{breadcrumb.length}}</div>
     </article>
 
 
     <audio ng-repeat="button in buttons" id="sound-{{button.name}}" src="{{'sound-' + button.name + '.wav'}}" preload="auto"></audio>
+    <audio id="sound-click" src="button-click.wav" preload="auto"></audio>
 
     
 
@@ -26,12 +27,30 @@
     <a href ng-click="pressButton()">Press Button</a>
     <script src="effects.js"></script>
     <script>
-      var angularApp = angular.module('angularApp', []);
-      angularApp.controller('MainController', function ($scope, $http) {
+      angular.module('angularApp', [])
+      .directive('onRepeatRender', function(){
+        return {
+          restrict: 'A',
+          link: function(scope, element, attr){
+            if(scope.$last){
+                scope.$evalAsync(attr.onRepeatRender);
+            }
+          }
+        }
+      })
+      .controller('MainController', function ($scope, $http) {
         var buttonsHandler = new ButtonsHandler();
+
+        $scope.renderButtons = function(){
+          buttonsHandler.renderButtons();
+        };
+
+        
+
         $scope.buttons = buttonsHandler.buttons;
         $scope.breadcrumb =[];
         $scope.userBreadcrumb =[];
+
 
         $scope.pressButton = function(){
           buttonsHandler.pressButton($(".button-red"));
