--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html ng-app="angularApp">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
-    <script src="underscore.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/main.css" />
+    <script src="dist/main.js"></script>
   </head>
 	<body ng-controller="MainController">
     <nav class="navbar navbar-default">
