--- a/menu.html
+++ b/menu.html
@@ -15,74 +15,26 @@
         </center>
 
        <div class="btn btn-success btn-block btn-lg">start game</div>
-       <div class="btn btn-default btn-block btn-lg">about / send feedback</div>
+       <div class="btn btn-danger btn-block btn-lg">about / send feedback</div>
+       <div class="btn btn-primary btn-block btn-lg">options</div>
 
-       <div class="panel panel-primary" style="width:45%;float:left;margin-right:10%;">
-          <div class="panel-heading">
-            <h3 class="panel-title">Buttons</h3>
-          </div>
-          <div class="panel-body">
-            <div class="btn-group" role="group" aria-label="asdsdads">
-              <button type="button" class="btn btn-default">2</button>
-              <button type="button" class="btn btn-default">3</button>
-              <button type="button" class="btn btn-primary">4</button>
-            </div>
-          </div>
+       <div class="well" style="font-size:12px;">
+        I made this game FREE and with NO ADS. Please rate and share on facebook.
         </div>
 
-        <div class="panel panel-primary" style="width:45%;float:left;">
-          <div class="panel-heading">
-            <h3 class="panel-title">Colors</h3>
-          </div>
-          <div class="panel-body">
-            <div class="btn-group" role="group" aria-label="asdsdads">
-              <button type="button" class="btn btn-primary">Yes</button>
-              <button type="button" class="btn btn-default">No</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel panel-primary" style="width:45%;float:left;margin-right:10%;">
-          <div class="panel-heading">
-            <h3 class="panel-title">Breadcrumb</h3>
-          </div>
-          <div class="panel-body">
-            <div class="btn-group" role="group" aria-label="asdsdads">
-              <button type="button" class="btn btn-primary">ON</button>
-              <button type="button" class="btn btn-default">OFF</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel panel-primary"  style="width:45%;float:left;">
-          <div class="panel-heading">
-            <h3 class="panel-title">Hint</h3>
-          </div>
-          <div class="panel-body">
-            <div class="btn-group" role="group" aria-label="asdsdads">
-              <button type="button" class="btn btn-primary">ON</button>
-              <button type="button" class="btn btn-default">OFF</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="panel panel-primary" style="width:100%; float:left;">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sound</h3>
-          </div>
-          <div class="panel-body">
-            <div class="btn-group" role="group" aria-label="asdsdads">
-              <button type="button" class="btn btn-primary">classic</button>
-              <button type="button" class="btn btn-default">piano</button>
-              <button type="button" class="btn btn-default">same</button>
-              <button type="button" class="btn btn-default">off</button>
-            </div>
-          </div>
-        </div>
+       <div class="btn btn-warning btn-block btn-lg" style="width:40%;float:left;margin-right:5%;">rate</div>
+       <div class="btn btn-primary btn-block btn-lg" style="width:55%;float:left;">share on FB</div>
+       
         
       </article>
     </div>
    
+   <script src="dist/main.js"></script>
+   <script>
+   var x = new Audio('sound/menu-song.wav');
+      x.load();
+      x.play();
+   </script>
  
   </body>
 </html>
